:lipstick: Update nav menu UI & fix menu hidden on mobile device

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,11 +1,12 @@
 .header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     position: absolute;
     width: 100%;
     margin-top: 50px;
     padding: 0 20px;
+}
+
+.navbar {
+    width: 100%;
 }
 
 .navbar ul {
@@ -73,18 +74,16 @@
     transform: translateX(-8px);
 }
 
-.navbar-menu {
+.burger {
     display: none;
-    color: var(--white);
-    background: transparent;
+    width: 40px;
+    height: 40px;
     border: none;
-    font-family: "Consolas", "Fira Code", "Source Code Pro", sans-serif;;
-    font-size: 18px;
-    transition: 0.4s all ease;
+    background: transparent;
 }
 
-.navbar-menu:hover {
-    color: var(--primary-color);
+.burger:hover {
+    cursor: pointer;
     transition: 0.4s all ease;
 }
 
@@ -93,15 +92,36 @@
 }
 
 @media only screen and (max-width: 630px) {
+    .header {
+        margin-top: 0;
+        padding: 0;
+    }
+
     .navbar.menu-open {
         position: fixed;
+        top: 0;
         right: 0;
-        bottom: 0;
         width: 100vw;
         height: 100vh;
-        backdrop-filter: blur(8px);
         z-index: 10;
+        backdrop-filter: blur(8px);
         transition: backdrop-filter 0.2s ease;
+    }
+
+    .navbar ul {
+        display: grid;
+        align-content: center;
+        justify-items: center;
+        grid-template-columns: 1fr;
+        gap: 30px;
+        position: fixed;
+        right: -100vw;
+        top: 0;
+        width: clamp(200px, 70vw, 400px);
+        height: 100vh;
+        background: var(--black);
+        visibility: hidden;
+        transition: all 0.5s cubic-bezier(0.50,-0.20, 0, 1.50);
     }
 
     .navbar.menu-open ul {
@@ -110,27 +130,59 @@
         transition: all 0.5s cubic-bezier(0.5, 0.01, 0.05, 1.20);
     }
 
-    .navbar ul {
-        flex-direction: column;
-        align-items: center;
-        position: fixed;
-        right: -100vw;
-        bottom: 0;
-        width: clamp(200px, 70vw, 400px);
-        height: 100vh;
-        background-color: var(--black);
-        visibility: hidden;
-        z-index: 10;
-        backdrop-filter: blur(10px);
-        transition: all 0.5s cubic-bezier(0.50,-0.20, 0, 1.50);
-    }
-
     .header .navbar ul li {
-        margin: 30px 0;
+        margin: 0;
     }
 
     .navbar a {
         font-size: 22px;
+    }
+
+    .burger {
+        display: block;
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        z-index: 10;
+    }
+
+    .burger-bar,
+    .burger-bar::before,
+    .burger-bar::after {
+        display: block;
+        width: 40px;
+        height: 3px;
+        position: absolute;
+        right: 0;
+        background: var(--white);
+        border-radius: 3px;
+        transition: 0.1s all ease;
+    }
+
+    .burger-bar::before,
+    .burger-bar::after {
+        content: "";
+        width: 34px;
+    }
+
+    .burger-bar::before {
+        transform: translateY(-12px);
+    }
+
+    .burger-bar::after {
+        transform: translateY(12px);
+    }
+
+    .menu-open .burger-bar {
+        background: transparent;
+    }
+
+    .menu-open .burger-bar::before {
+        transform: rotate(45deg);
+    }
+
+    .menu-open .burger-bar::after {
+        transform: rotate(-45deg);
     }
 
     .nav-link::after,
@@ -141,14 +193,5 @@
     .nav-link::before,
     .nav-link:hover::before {
         transform: translate(-8px, 2px);
-    }
-
-    .navbar-menu {
-        display: block;
-        position: fixed;
-        top: 50px;
-        right: 30px;
-        cursor: pointer;
-        z-index: 10;
     }
 }
